--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
     <title>Mariachi's Mexican Restaurant - Maryville, IL</title>
     <meta name="description"
         content="Mariachi's Mexican Restaurant in Maryville, IL. Authentic Mexican cuisine, casual atmosphere, and famous margaritas.">
+    <link rel="canonical" href="http://mariachismexfood.com/">
+    <link rel="icon" type="image/png" href="assets/logo_mobile.png">
+    <meta property="og:title" content="Mariachi's Mexican Restaurant - Maryville, IL">
+    <meta property="og:description"
+        content="Authentic Mexican cuisine and famous margaritas in Maryville. Visit Mariachi's for casual dining, vibrant decor, and spectacular service.">
+    <meta property="og:image" content="http://mariachismexfood.com/assets/hero_fajita_burrito.jpg">
+    <meta property="og:url" content="http://mariachismexfood.com/">
+    <meta property="og:type" content="business.business">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Mariachi's Mexican Restaurant - Maryville, IL">
+    <meta name="twitter:description" content="Authentic Mexican cuisine and famous margaritas in Maryville, IL.">
+    <meta name="twitter:image" content="http://mariachismexfood.com/assets/hero_fajita_burrito.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -18,7 +31,7 @@
       "@context": "https://schema.org",
       "@type": "Restaurant",
       "name": "Mariachi's Mexican Restaurant",
-      "image": "",
+      "image": "http://mariachismexfood.com/assets/hero_fajita_burrito.jpg",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "2922 N Center St",
@@ -54,7 +67,7 @@
           "closes": "21:00"
         }
       ],
-      "menu": "",
+      "menu": "http://mariachismexfood.com/menu.html",
       "servesCuisine": "Mexican"
     }
     </script>
@@ -140,7 +153,8 @@
         <div class="container">
             <h2 class="section-title">Experience Mariachi's</h2>
             <p>Casual, cozy, and family-friendly. We pride ourselves on spectacular service and an inviting atmosphere
-                featuring vibrant decor and a full bar.</p>
+                featuring vibrant decor and a full bar. Come by and visit us for delicious Mexican cuisine and tasty
+                margaritas. Enjoy a taste of Mexico right here in Maryville!</p>
         </div>
     </section>
 
