added srcset for mobile

--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
         <!-- Hero Gallery (Slideshow) -->
         <section id="home" class="hero-gallery">
             <div class="slide active slide-lcp">
-                <img src="assets/hero_fajita_burrito.avif" alt="Fajita burrito" class="slide-image" width="1920"
-                    height="1080" fetchpriority="high" loading="eager" decoding="async">
+                <img src="assets/hero_fajita_burrito.avif"
+                    srcset="assets/hero_fajita_burrito_mobile.avif 600w, assets/hero_fajita_burrito.avif 1920w"
+                    sizes="100vw" alt="Fajita burrito" class="slide-image" fetchpriority="high" loading="eager">
             </div>
             <div class="slide" role="img" aria-label="Santa Fe Nachos" data-bg="assets/hero_santa_fe_nachos.avif"></div>
             <div class="slide" role="img" aria-label="Cheesy Quesadillas" data-bg="assets/hero_quesadillas.avif"></div>
