improved best practices

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <title>Mariachi's Mexican Restaurant - Maryville, IL</title>
     <meta name="description"
         content="Mariachi's Mexican Restaurant in Maryville, IL. Authentic Mexican cuisine, casual atmosphere, and famous margaritas.">
-    <link rel="canonical" href="http://mariachismaryville.com/">
+    <link rel="canonical" href="https://mariachismaryville.com/">
     <link rel="icon" type="image/avif" href="assets/logo_mobile.avif">
     <meta property="og:title" content="Mariachi's Mexican Restaurant - Maryville, IL">
     <meta property="og:description"
         content="Authentic Mexican cuisine and famous margaritas in Maryville. Visit Mariachi's for casual dining, vibrant decor, and spectacular service.">
-    <meta property="og:image" content="http://mariachismaryville.com/assets/hero_fajita_burrito.avif">
-    <meta property="og:url" content="http://mariachismaryville.com/">
+    <meta property="og:image" content="https://mariachismaryville.com/assets/hero_fajita_burrito.avif">
+    <meta property="og:url" content="https://mariachismaryville.com/">
     <meta property="og:type" content="business.business">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Mariachi's Mexican Restaurant - Maryville, IL">
     <meta name="twitter:description" content="Authentic Mexican cuisine and famous margaritas in Maryville, IL.">
-    <meta name="twitter:image" content="http://mariachismaryville.com/assets/hero_fajita_burrito.avif">
+    <meta name="twitter:image" content="https://mariachismaryville.com/assets/hero_fajita_burrito.avif">
     <link rel="stylesheet" href="css/base.min.css">
     <noscript>
         <script src="https://www.google.com/recaptcha/api.js"></script>
@@ -30,7 +30,7 @@
       "@context": "https://schema.org",
       "@type": "Restaurant",
       "name": "Mariachi's Mexican Restaurant",
-      "image": "http://mariachismaryville.com/assets/hero_fajita_burrito.avif",
+    "image": "https://mariachismaryville.com/assets/hero_fajita_burrito.avif",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "2922 N Center St",
@@ -44,7 +44,7 @@
         "latitude": 38.7365094,
         "longitude": -89.9561422
       },
-      "url": "http://mariachismaryville.com/",
+    "url": "https://mariachismaryville.com/",
       "telephone": "+16182886300",
       "openingHoursSpecification": [
         {
@@ -66,7 +66,7 @@
           "closes": "21:00"
         }
       ],
-      "menu": "http://mariachismaryville.com/menu.html",
+    "menu": "https://mariachismaryville.com/menu.html",
       "servesCuisine": "Mexican"
     }
     </script>
@@ -77,7 +77,7 @@
     <!-- Top Bar -->
     <div class="top-bar">
         <a href="https://www.google.com/maps/place/2922+N+Center+St,+Maryville,+IL+62062" target="_blank"
-            class="address-link">
+            rel="noopener noreferrer" class="address-link">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                 <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
             </svg>
@@ -116,9 +116,8 @@
         <!-- Hero Gallery (Slideshow) -->
         <section id="home" class="hero-gallery">
             <div class="slide active slide-lcp">
-                <img src="assets/hero_fajita_burrito.avif"
-                    srcset="assets/hero_fajita_burrito_mobile.avif 600w, assets/hero_fajita_burrito.avif 1920w"
-                    sizes="100vw" alt="Fajita burrito" class="slide-image" fetchpriority="high" loading="eager">
+                <img src="assets/hero_fajita_burrito.avif" alt="Fajita burrito" class="slide-image" width="1920"
+                    height="1080" fetchpriority="high" loading="eager" decoding="async">
             </div>
             <div class="slide" role="img" aria-label="Santa Fe Nachos" data-bg="assets/hero_santa_fe_nachos.avif"></div>
             <div class="slide" role="img" aria-label="Cheesy Quesadillas" data-bg="assets/hero_quesadillas.avif"></div>
@@ -236,12 +235,14 @@
             <div class="container">
                 <h3>Featured In</h3>
                 <div class="logos-grid">
-                    <a href="https://www.riversandroutes.com/directory/mariachis-maryville/" target="_blank">Rivers &
+                    <a href="https://www.riversandroutes.com/directory/mariachis-maryville/" target="_blank"
+                        rel="noopener noreferrer">Rivers &
                         Routes</a>
-                    <a href="https://www.enjoyillinois.com/explore/listing/mariachis/" target="_blank">Enjoy
+                    <a href="https://www.enjoyillinois.com/explore/listing/mariachis/" target="_blank"
+                        rel="noopener noreferrer">Enjoy
                         Illinois</a>
                     <a href="https://www.theintelligencer.com/news/article/mariachis-restaurant-maryville-il-20206724.php"
-                        target="_blank">The Intelligencer</a>
+                        target="_blank" rel="noopener noreferrer">The Intelligencer</a>
                 </div>
             </div>
         </section>
@@ -308,7 +309,7 @@
                     <div class="address-hours">
                         <p class="address-line">
                             <a href="https://www.google.com/maps/place/2922+N+Center+St,+Maryville,+IL+62062"
-                                target="_blank" class="address-link">
+                                target="_blank" rel="noopener noreferrer" class="address-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     viewBox="0 0 16 16">
                                     <path
@@ -346,12 +347,12 @@
             <div class="container">
                 <p>&copy; 2026 Mariachi's Mexican Restaurant. All Rights Reserved.</p>
                 <div class="social-links">
-                    <a href="https://www.facebook.com/p/Maryville-Mariachis-100089984702552/"
-                        target="_blank">Facebook</a>
+                    <a href="https://www.facebook.com/p/Maryville-Mariachis-100089984702552/" target="_blank"
+                        rel="noopener noreferrer">Facebook</a>
                     <a href="https://www.tripadvisor.com/Restaurant_Review-g36331-d4913753-Reviews-Mariachi_s-Maryville_Illinois.html"
-                        target="_blank">TripAdvisor</a>
+                        target="_blank" rel="noopener noreferrer">TripAdvisor</a>
                     <a href="https://www.yelp.com/biz/mariachis-mexican-restaurant-and-cantina-maryville"
-                        target="_blank">Yelp</a>
+                        target="_blank" rel="noopener noreferrer">Yelp</a>
                 </div>
             </div>
         </footer>
