--- a/menu.html
+++ b/menu.html
@@ -8,18 +8,18 @@
     <title>Menu - Mariachi's Mexican Restaurant - Maryville, IL</title>
     <meta name="description"
         content="Full Menu at Mariachi's Mexican Restaurant. Appetizers, Salads, Combinations, and our famous Grill specials. View prices and menu items online." />
-    <link rel="canonical" href="http://mariachismexfood.com/menu.html">
+    <link rel="canonical" href="https://mariachismexfood.com/menu.html">
     <link rel="icon" type="image/avif" href="assets/logo_mobile.avif">
     <meta property="og:title" content="Menu - Mariachi's Mexican Restaurant - Maryville, IL">
     <meta property="og:description"
         content="Explore our full menu featuring authentic Mexican cuisine. From appetizers and salads to signature grill specials and combinations.">
-    <meta property="og:image" content="http://mariachismexfood.com/assets/fajita_burrito.avif">
-    <meta property="og:url" content="http://mariachismexfood.com/menu.html">
+    <meta property="og:image" content="https://mariachismexfood.com/assets/fajita_burrito.avif">
+    <meta property="og:url" content="https://mariachismexfood.com/menu.html">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Menu - Mariachi's Mexican Restaurant - Maryville, IL">
     <meta name="twitter:description" content="Explore our full menu featuring authentic Mexican cuisine.">
-    <meta name="twitter:image" content="http://mariachismexfood.com/assets/fajita_burrito.avif">
+    <meta name="twitter:image" content="https://mariachismexfood.com/assets/fajita_burrito.avif">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -36,13 +36,13 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "http://mariachismexfood.com/"
+          "item": "https://mariachismexfood.com/"
         },
         {
           "@type": "ListItem",
           "position": 2,
           "name": "Menu",
-          "item": "http://mariachismexfood.com/menu.html"
+          "item": "https://mariachismexfood.com/menu.html"
         }
       ]
     }
@@ -52,7 +52,7 @@
 <body>
     <!-- Top Bar -->
     <div class="top-bar">
-        <a href="https://www.google.com/maps/place/2922+N+Center+St,+Maryville,+IL+62062" target="_blank"
+        <a href="https://www.google.com/maps/place/2922+N+Center+St,+Maryville,+IL+62062" target="_blank" rel="noopener noreferrer"
             class="address-link">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                 <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
@@ -507,11 +507,11 @@
                 <p>&copy; 2026 Mariachi's Mexican Restaurant. All Rights Reserved.</p>
                 <div class="social-links">
                     <a href="https://www.facebook.com/p/Maryville-Mariachis-100089984702552/"
-                        target="_blank">Facebook</a>
+                        target="_blank" rel="noopener noreferrer">Facebook</a>
                     <a href="https://www.tripadvisor.com/Restaurant_Review-g36331-d4913753-Reviews-Mariachi_s-Maryville_Illinois.html"
-                        target="_blank">TripAdvisor</a>
+                        target="_blank" rel="noopener noreferrer">TripAdvisor</a>
                     <a href="https://www.yelp.com/biz/mariachis-mexican-restaurant-and-cantina-maryville"
-                        target="_blank">Yelp</a>
+                        target="_blank" rel="noopener noreferrer">Yelp</a>
                 </div>
             </div>
         </footer>
