--- a/success.html
+++ b/success.html
@@ -47,7 +47,7 @@
 
 <body>
     <div class="top-bar">
-        <a href="https://www.google.com/maps/place/2922+N+Center+St,+Maryville,+IL+62062" target="_blank"
+        <a href="https://www.google.com/maps/place/2922+N+Center+St,+Maryville,+IL+62062" target="_blank" rel="noopener noreferrer"
             class="address-link">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                 <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
@@ -105,11 +105,11 @@
         <div class="container">
             <p>&copy; 2026 Mariachi's Mexican Restaurant. All Rights Reserved.</p>
             <div class="social-links">
-                <a href="https://www.facebook.com/p/Maryville-Mariachis-100089984702552/" target="_blank">Facebook</a>
+                <a href="https://www.facebook.com/p/Maryville-Mariachis-100089984702552/" target="_blank" rel="noopener noreferrer">Facebook</a>
                 <a href="https://www.tripadvisor.com/Restaurant_Review-g36331-d4913753-Reviews-Mariachi_s-Maryville_Illinois.html"
-                    target="_blank">TripAdvisor</a>
+                    target="_blank" rel="noopener noreferrer">TripAdvisor</a>
                 <a href="https://www.yelp.com/biz/mariachis-mexican-restaurant-and-cantina-maryville"
-                    target="_blank">Yelp</a>
+                    target="_blank" rel="noopener noreferrer">Yelp</a>
             </div>
         </div>
     </footer>
