fixed captcha alignment

--- a/index.html
+++ b/index.html
@@ -296,7 +296,9 @@
                     <input type="email" name="email" placeholder="Your Email" required>
                     <textarea name="message" placeholder="Your Message (Catering inquiry, feedback, etc.)" rows="4"
                         required></textarea>
-                    <div data-netlify-recaptcha="true"></div>
+                    <div class="captcha-container">
+                        <div data-netlify-recaptcha="true"></div>
+                    </div>
                     <button type="submit" class="btn btn-primary">Send Message</button>
                 </form>
 
